--- a/app/scss/scaffolding.scss
+++ b/app/scss/scaffolding.scss
@@ -97,3 +97,11 @@
 .txt-align-center {
     text-align: center;
 }
+
+.hide {
+    display: none;
+}
+
+.invisible {
+    visibility: hidden;
+}
